# zigzag

./: README.md  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  lexique.csv  tauri.conf.json
src-tauri/src/: grid.rs  letters_prob.rs  lib.rs  main.rs
