[package]
name = "vrac"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vrac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
csv = "1.4.0"
unicode-normalization = "0.1.25"
rand_pcg = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = "0.9.3"
rand = "0.9.2"
rand_xoshiro = "0.7.0"

